--- a/plugins/mailcheck/Makefile.am
+++ b/plugins/mailcheck/Makefile.am
@@ -25,7 +25,7 @@ libmailcheck_la_LDFLAGS +=                                              \
 	@LIBXML_LDFLAGS@                                                \
 	@LIBX11_LDFLAGS@                                                
 libmailcheck_la_LIBADD +=                                               \
-	@XFCE_MCS_MANAGER_LIBS@                                         \
+	@LIBXFCEGUI4_LIBS@                                              \
 	@LIBXML_LIBS@                                                   \
 	@LIBX11_LIBS@
 endif
