--- a/plugins/separator/Makefile.am
+++ b/plugins/separator/Makefile.am
@@ -24,7 +24,7 @@ libseparator_la_LDFLAGS +=                                              \
 	@LIBXML_LDFLAGS@                                                \
 	@LIBX11_LDFLAGS@                                                
 libseparator_la_LIBADD +=                                               \
-	@XFCE_MCS_MANAGER_LIBS@                                         \
+	@LIBXFCEGUI4_LIBS@                                              \
 	@LIBXML_LIBS@                                                   \
 	@LIBX11_LIBS@
 endif
