--- a/plugins/switcher/Makefile.am
+++ b/plugins/switcher/Makefile.am
@@ -25,7 +25,7 @@ libswitcher_la_LDFLAGS +=                                               \
 	@LIBXML_LDFLAGS@                                                \
 	@LIBX11_LDFLAGS@                                                
 libswitcher_la_LIBADD +=                                                \
-	@XFCE_MCS_MANAGER_LIBS@                                         \
+	@LIBXFCEGUI4_LIBS@                                              \
 	@LIBXML_LIBS@                                                   \
 	@LIBX11_LIBS@
 endif
