--- a/plugins/switcher/Makefile.in
+++ b/plugins/switcher/Makefile.in
@@ -44,7 +44,7 @@ host_triplet = @host@
 @HAVE_CYGWIN_TRUE@	@LIBX11_LDFLAGS@                                                
 
 @HAVE_CYGWIN_TRUE@am__append_2 = \
-@HAVE_CYGWIN_TRUE@	@XFCE_MCS_MANAGER_LIBS@                                         \
+@HAVE_CYGWIN_TRUE@	@LIBXFCEGUI4_LIBS@                                              \
 @HAVE_CYGWIN_TRUE@	@LIBXML_LIBS@                                                   \
 @HAVE_CYGWIN_TRUE@	@LIBX11_LIBS@
 
