--- a/plugins/systembuttons/Makefile.am
+++ b/plugins/systembuttons/Makefile.am
@@ -24,7 +24,7 @@ libsystembuttons_la_LDFLAGS +=                                          \
 	@LIBXML_LDFLAGS@                                                \
 	@LIBX11_LDFLAGS@                                                
 libsystembuttons_la_LIBADD +=                                           \
-	@XFCE_MCS_MANAGER_LIBS@                                         \
+	@LIBXFCEGUI4_LIBS@                                              \
 	@LIBXML_LIBS@                                                   \
 	@LIBX11_LIBS@
 endif
