update EU translations
(Old svn revision: 4138)

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,7 @@ conf_DATA = 								\
 	contents.xml.ar							\
 	contents.xml.az							\
 	contents.xml.ca							\
+	contents.xml.eu							\
 	contents.xml.he							\
 	contents.xml.hu							\
 	contents.xml.it							\
