Throw xfce_textdomain() in lots of places to fix translations. Hopefully.
(Old svn revision: 4139)

--- a/plugins/clock/Makefile.in
+++ b/plugins/clock/Makefile.in
@@ -238,7 +238,8 @@ libclock_la_SOURCES = \
 libclock_la_CFLAGS = \
 	-I$(top_srcdir)							\
 	@LIBXFCEGUI4_CFLAGS@						\
-	@LIBXML_CFLAGS@
+	@LIBXML_CFLAGS@							\
+	-DLOCALEDIR=\"$(localedir)\"
 
 libclock_la_LIBADD = \
 	@LIBS@\
