--- a/plugins/switcher/Makefile.in
+++ b/plugins/switcher/Makefile.in
@@ -239,7 +239,8 @@ libswitcher_la_CFLAGS = \
 	-I$(top_srcdir)							\
 	@LIBX11_CFLAGS@							\
 	@LIBXFCEGUI4_CFLAGS@						\
-	@LIBXML_CFLAGS@
+	@LIBXML_CFLAGS@							\
+	-DLOCALEDIR=\"$(localedir)\"
 
 libswitcher_la_LIBADD = \
 	@LIBS@\
