--- a/plugins/sample-plugin/Makefile.in
+++ b/plugins/sample-plugin/Makefile.in
@@ -235,7 +235,8 @@ libsample_la_SOURCES = \
 libsample_la_CFLAGS = \
 	-I$(top_srcdir)						\
 	@LIBXFCEGUI4_CFLAGS@					\
-	@LIBXML_CFLAGS@
+	@LIBXML_CFLAGS@						\
+	-DLOCALEDIR=\"$(localedir)\"
 
 libsample_la_LIBADD = \
 	@LIBS@\
