Add nl translations
(Old svn revision: 4149)

--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -2,8 +2,10 @@
 Encoding=UTF-8
 Name=Xfce 4 Panel Settings
 Name[fr]=Paramètres du panneau Xfce 4
+Name[nl]=Xfce 4 Panel Opties
 Comment=Panel Settings
 Comment[fr]=Paramétrage du panneau
+Comment[nl]=Instellingen voor het paneel
 Exec=xfce-setting-show xfce
 Icon=xfce4-panel
 Terminal=false
@@ -11,3 +13,4 @@ Type=Application
 Categories=X-XFCE;Settings;DesktopSettings;
 OnlyShowIn=XFCE;
 GenericName=Panel Settings
+GenericName[nl]=Panel Opties
