--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Name=Xfce 4 Panel Settings
 Name[fr]=Paramètres du panneau Xfce 4
-Name[nl]=Xfce 4 Panel Opties
+Name[nl]=Instellingen Xfce 4 Panel
 Comment=Panel Settings
 Comment[fr]=Paramétrage du panneau
 Comment[nl]=Instellingen voor het paneel
@@ -13,4 +13,4 @@ Type=Application
 Categories=X-XFCE;Settings;DesktopSettings;
 OnlyShowIn=XFCE;
 GenericName=Panel Settings
-GenericName[nl]=Panel Opties
+GenericName[nl]=Instellingen Panel
