Documentation and screenshots update
(Old svn revision: 4154)

--- a/doc/C/images/Makefile.am
+++ b/doc/C/images/Makefile.am
@@ -1,5 +1,6 @@
 imagesdir = $(datadir)/xfce4/doc/C/images
 images_DATA = \
+	add-item-dialog.png \
 	clock-properties.png \
 	default_panel.png \
 	handle-popup.png \
@@ -8,6 +9,7 @@ images_DATA = \
 	mailcheck-properties.png \
 	menuitem-properties.png \
 	nooptions-properties.png \
+	pager-properties.png \
 	panel-settings.png \
 	systembuttons-properties.png
 
