--- a/doc/C/images/Makefile.in
+++ b/doc/C/images/Makefile.in
@@ -197,6 +197,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 imagesdir = $(datadir)/xfce4/doc/C/images
 images_DATA = \
+	add-item-dialog.png \
 	clock-properties.png \
 	default_panel.png \
 	handle-popup.png \
@@ -205,6 +206,7 @@ images_DATA = \
 	mailcheck-properties.png \
 	menuitem-properties.png \
 	nooptions-properties.png \
+	pager-properties.png \
 	panel-settings.png \
 	systembuttons-properties.png
 
