--- a/xfce4.spec.in
+++ b/xfce4.spec.in
@@ -1,4 +1,4 @@
-Summary: 	Next generation panel for xfce
+Summary: 	Panel for Xfce 4
 Name: 		xfce4-panel
 Version: 	@VERSION@
 Release: 	1
@@ -23,28 +23,6 @@ BuildRequires: 	libxml2-devel >= @LIBXML_REQUIRED_VERSION@
 %description
 xfce4-panel is the panel for the Xfce desktop environment
 
-# These are all required to have a properly functioning panel, so they should 
-# not be separate IMO -- Jasper
-
-# %package themes
-# Summary:	Icon themes for xfce4
-# Group:		User Interface/Desktops
-# Requires:	xfce4
-# This should be really noarch, but if I set noarch here, even the arch
-# dependent stuff is marked as noarch, so... no noarch.
-# BuildArch:	noarch
-
-# %description themes
-# Various icon themes for xfce4.
-
-# %package plugins
-# Summary:	Panel plugins for xfce4
-# Group:		User Interface/Desktops
-# Requires:	xfce4
-
-# %description plugins
-# Various panel plugins for xfce4.
-
 %prep
 %setup -q
 
@@ -61,8 +39,8 @@ rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,root,root)
-%doc README TODO ChangeLog NEWS NOTES INSTALL COPYING AUTHORS
-%{_sysconfdir}/xfce4/
+%doc README README.Kiosk TODO ChangeLog NEWS NOTES INSTALL COPYING AUTHORS HACKING
+%{_sysconfdir}/xdg/xfce4/
 %{_datadir}/xfce4/doc/
 %{_datadir}/locale/
 %{_datadir}/applications
