--- a/Makefile.in
+++ b/Makefile.in
@@ -235,7 +235,8 @@ conf_DATA = \
 	contents.xml.ro							\
 	contents.xml.ru							\
 	contents.xml.sk							\
-	contents.xml.vi
+	contents.xml.vi							\
+	contents.xml.zh_TW
 
 EXTRA_DIST = \
 	HACKING								\
