--- a/Makefile.in
+++ b/Makefile.in
@@ -239,6 +239,7 @@ conf_DATA = \
 	contents.xml.zh_TW
 
 EXTRA_DIST = \
+	README.Kiosk							\
 	HACKING								\
 	NOTES								\
 	$(conf_DATA)							\
