zh_TW translations of desktop files from Ambrose Li <acli@ada.dhs.org>
(Old svn revision: 4167)

--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -3,9 +3,11 @@ Encoding=UTF-8
 Name=Xfce 4 Panel Settings
 Name[fr]=Paramètres du panneau Xfce 4
 Name[nl]=Instellingen Xfce 4 Panel
+Name[zh_TW]=Xfce 4 面板設定
 Comment=Panel Settings
 Comment[fr]=Paramétrage du panneau
 Comment[nl]=Instellingen voor het paneel
+Comment[zh_TW]=設定面板
 Exec=xfce-setting-show xfce
 Icon=xfce4-panel
 Terminal=false
