--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -2,10 +2,12 @@
 Encoding=UTF-8
 Name=Xfce 4 Panel Settings
 Name[fr]=Paramètres du panneau Xfce 4
+Name[he]=הגדרות לוח Xfce 4
 Name[nl]=Instellingen Xfce 4 Panel
 Name[zh_TW]=Xfce 4 面板設定
 Comment=Panel Settings
 Comment[fr]=Paramétrage du panneau
+Comment[he]=הגדרות לוח
 Comment[nl]=Instellingen voor het paneel
 Comment[zh_TW]=設定面板
 Exec=xfce-setting-show xfce
