update TR translations
(Old svn revision: 4230)

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,6 +16,7 @@ conf_DATA = 								\
 	contents.xml.ro							\
 	contents.xml.ru							\
 	contents.xml.sk							\
+	contents.xml.tr							\
 	contents.xml.vi							\
 	contents.xml.zh_TW
 
