update KO translations and add screenshots in xfprint doc
(Old svn revision: 4238)

--- a/Makefile.in
+++ b/Makefile.in
@@ -241,6 +241,7 @@ conf_DATA = \
 	contents.xml.he							\
 	contents.xml.hu							\
 	contents.xml.it							\
+	contents.xml.ko							\
 	contents.xml.ms							\
 	contents.xml.nl							\
 	contents.xml.ro							\
