Update ChangeLog. Fix make distcheck.
(Old svn revision: 4255)

--- a/Makefile.in
+++ b/Makefile.in
@@ -252,9 +252,16 @@ conf_DATA = \
 	contents.xml.zh_TW
 
 EXTRA_DIST = \
-	README.Kiosk							\
+	AUTHORS								\
+	COPYING								\
+	ChangeLog							\
 	HACKING								\
+	INSTALL								\
+	NEWS								\
 	NOTES								\
+	README								\
+	README.Kiosk							\
+	TODO								\
 	$(conf_DATA)							\
 	xfce4.spec							\
 	.indent.pro
