--- a/settings/Makefile.in
+++ b/settings/Makefile.in
@@ -232,7 +232,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-plugindir = @XFCE_MCS_MANAGER_PLUGINSDIR@
+plugindir = $(libdir)/xfce4/mcs-plugins
 plugin_LTLIBRARIES = libxfce4settings.la
 libxfce4settings_la_LDFLAGS = -avoid-version -module $(am__append_1)
 libxfce4settings_la_SOURCES = \
