update ET translations
(Old svn revision: 4257)

--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -1,12 +1,14 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Xfce 4 Panel Settings
+Name[et]=Xfce 4 paneeli seaded
 Name[fr]=Paramètres du panneau Xfce 4
 Name[he]=הגדרות לוח Xfce 4
 Name[ko]=Xfce 4 패널 설정
 Name[nl]=Instellingen Xfce 4 Panel
 Name[zh_TW]=Xfce 4 面板設定
 Comment=Panel Settings
+Comment[et]=Paneeli seaded
 Comment[fr]=Paramétrage du panneau
 Comment[he]=הגדרות לוח
 Comment[ko]=패널 설정
@@ -19,5 +21,6 @@ Type=Application
 Categories=X-XFCE;Settings;DesktopSettings;
 OnlyShowIn=XFCE;
 GenericName=Panel Settings
+GenericName[et]=Paneeli seaded
 GenericName[ko]=패널 설정
 GenericName[nl]=Instellingen Panel
