--- a/panel/Makefile.in
+++ b/panel/Makefile.in
@@ -292,6 +292,7 @@ xfce4_panelinclude_HEADERS = \
 
 xfce4_panel_CFLAGS = \
 	-I$(top_srcdir)							\
+	-I$(top_srcdir)/libs						\
 	@LIBSTARTUP_NOTIFICATION_CFLAGS@				\
 	@LIBX11_CFLAGS@							\
 	@LIBXFCEGUI4_CFLAGS@						\
@@ -302,7 +303,8 @@ xfce4_panel_CFLAGS = \
 	-DSYSCONFDIR=\"$(sysconfdir)\"					\
 	-DLOCALEDIR=\"$(localedir)\"
 
-xfce4_panel_LDFLAGS = -export-dynamic $(am__append_1)
+xfce4_panel_LDFLAGS = ../libs/libxfce4panel.la -export-dynamic \
+	$(am__append_1)
 xfce4_panel_LDADD = \
 	@LIBSTARTUP_NOTIFICATION_LIBS@					\
 	@LIBX11_LIBS@							\
