--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -6,6 +6,7 @@ Name[fr]=Paramètres du panneau Xfce 4
 Name[he]=הגדרות לוח Xfce 4
 Name[ko]=Xfce 4 패널 설정
 Name[nl]=Instellingen Xfce 4 Panel
+Name[ru]=Настройки панели Xfce 4
 Name[zh_TW]=Xfce 4 面板設定
 Comment=Panel Settings
 Comment[et]=Paneeli seaded
@@ -13,6 +14,7 @@ Comment[fr]=Paramétrage du panneau
 Comment[he]=הגדרות לוח
 Comment[ko]=패널 설정
 Comment[nl]=Instellingen voor het paneel
+Comment[ru]=Настройки панели
 Comment[zh_TW]=設定面板
 Exec=xfce-setting-show xfce
 Icon=xfce4-panel
@@ -24,3 +26,4 @@ GenericName=Panel Settings
 GenericName[et]=Paneeli seaded
 GenericName[ko]=패널 설정
 GenericName[nl]=Instellingen Panel
+GenericName[ru]=Настройки панели
