update RO translations
(Old svn revision: 4288)

--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -6,6 +6,7 @@ Name[fr]=Paramètres du panneau Xfce 4
 Name[he]=הגדרות לוח Xfce 4
 Name[ko]=Xfce 4 패널 설정
 Name[nl]=Instellingen Xfce 4 Panel
+Name[ro]=Xfce4 setări panou
 Name[ru]=Настройки панели Xfce 4
 Name[zh_TW]=Xfce 4 面板設定
 Comment=Panel Settings
@@ -14,6 +15,7 @@ Comment[fr]=Paramétrage du panneau
 Comment[he]=הגדרות לוח
 Comment[ko]=패널 설정
 Comment[nl]=Instellingen voor het paneel
+Comment[ro]=Setări ale panoului
 Comment[ru]=Настройки панели
 Comment[zh_TW]=設定面板
 Exec=xfce-setting-show xfce
@@ -26,4 +28,5 @@ GenericName=Panel Settings
 GenericName[et]=Paneeli seaded
 GenericName[ko]=패널 설정
 GenericName[nl]=Instellingen Panel
+GenericName[ro]=Setări panou
 GenericName[ru]=Настройки панели
