--- a/Makefile.in
+++ b/Makefile.in
@@ -242,6 +242,7 @@ conf_DATA = \
 	contents.xml.hu							\
 	contents.xml.it							\
 	contents.xml.ko							\
+	contents.xml.lt							\
 	contents.xml.ms							\
 	contents.xml.nl							\
 	contents.xml.ro							\
@@ -731,6 +732,12 @@ rpm: dist
 
 html: Makefile
 	make -C doc html
+
+dist-bz2: dist
+	zcat $(PACKAGE)-$(VERSION).tar.gz | bzip2 --best -c > $(PACKAGE)-$(VERSION).tar.bz2
+
+distcheck-bz2: distcheck
+	zcat $(PACKAGE)-$(VERSION).tar.gz | bzip2 --best -c > $(PACKAGE)-$(VERSION).tar.bz2
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
