--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -5,14 +5,20 @@ Name[et]=Xfce 4 paneeli seaded
 Name[fr]=Paramètres du panneau Xfce 4
 Name[he]=הגדרות לוח Xfce 4
 Name[ko]=Xfce 4 패널 설정
+Name[lt]=Xfce 4 skydelio nustatymai
 Name[nl]=Instellingen Xfce 4 Panel
+Name[ro]=Xfce4 setări panou
+Name[ru]=Настройки панели Xfce 4
 Name[zh_TW]=Xfce 4 面板設定
 Comment=Panel Settings
 Comment[et]=Paneeli seaded
 Comment[fr]=Paramétrage du panneau
 Comment[he]=הגדרות לוח
 Comment[ko]=패널 설정
+Comment[lt]=Skydelio nustatymai
 Comment[nl]=Instellingen voor het paneel
+Comment[ro]=Setări ale panoului
+Comment[ru]=Настройки панели
 Comment[zh_TW]=設定面板
 Exec=xfce-setting-show xfce
 Icon=xfce4-panel
@@ -23,4 +29,7 @@ OnlyShowIn=XFCE;
 GenericName=Panel Settings
 GenericName[et]=Paneeli seaded
 GenericName[ko]=패널 설정
+GenericName[lt]=Skydelio nustatymai
 GenericName[nl]=Instellingen Panel
+GenericName[ro]=Setări panou
+GenericName[ru]=Настройки панели
