Iconbox almost works (TM)
(Old svn revision: 4295)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -15,10 +15,15 @@ panel/popup.c
 #taskbar
 taskbar/xftaskbar.c
 
+#iconbox
+iconbox/iconbox.c
+iconbox/iconbox-settings.c
+
 # settings
 settings/xfce_settings_plugin.c
 settings/xfce_settings_dialog.c
 settings/xftaskbar_plugin.c
+settings/iconbox_plugin.c
 
 # plugins
 plugins/clock/clock.c
