Add (rewritten) systray to panel
(Old svn revision: 4301)

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1,8 +1,9 @@
 SUBDIRS =								\
 	clock								\
 	mailcheck							\
-	switcher							\
-	systembuttons							\
 	pager								\
 	sample-plugin							\
-	separator
+	separator							\
+	switcher							\
+	systembuttons							\
+	systray
