--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,7 @@ dnl
 
 AC_INIT([panel/main.c])
 
-AM_INIT_AUTOMAKE([xfce4-panel], [4.3.0])
+AM_INIT_AUTOMAKE([xfce4-panel], [4.3.1])
 
 AM_CONFIG_HEADER([config.h])
 
@@ -93,5 +93,6 @@ plugins/systembuttons/Makefile
 plugins/pager/Makefile
 plugins/sample-plugin/Makefile
 plugins/separator/Makefile
+plugins/systray/Makefile
 ])
 
