--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -2,6 +2,7 @@
 Encoding=UTF-8
 Name=Xfce 4 Panel Settings
 Name[et]=Xfce 4 paneeli seaded
+Name[fi]=Xfce 4 paneelin asetukset
 Name[fr]=Paramètres du panneau Xfce 4
 Name[he]=הגדרות לוח Xfce 4
 Name[ko]=Xfce 4 패널 설정
@@ -10,6 +11,7 @@ Name[ru]=Настройки панели Xfce 4
 Name[zh_TW]=Xfce 4 面板設定
 Comment=Panel Settings
 Comment[et]=Paneeli seaded
+Comment[fi]=Paneelin asetukset
 Comment[fr]=Paramétrage du panneau
 Comment[he]=הגדרות לוח
 Comment[ko]=패널 설정
@@ -24,6 +26,7 @@ Categories=X-XFCE;Settings;DesktopSettings;
 OnlyShowIn=XFCE;
 GenericName=Panel Settings
 GenericName[et]=Paneeli seaded
+GenericName[fi]=Paneelin asetukset
 GenericName[ko]=패널 설정
 GenericName[nl]=Instellingen Panel
 GenericName[ru]=Настройки панели
