update FI translations
(Old svn revision: 4307)

--- a/Makefile.in
+++ b/Makefile.in
@@ -237,6 +237,7 @@ conf_DATA = \
 	contents.xml.az							\
 	contents.xml.ca							\
 	contents.xml.eu							\
+	contents.xml.fi							\
 	contents.xml.fr							\
 	contents.xml.he							\
 	contents.xml.hu							\
