--- a/iconbox/Makefile.am
+++ b/iconbox/Makefile.am
@@ -14,7 +14,7 @@ xfce4_iconbox_CFLAGS =							\
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"
 
 xfce4_iconbox_LDADD =							\
-	../libs/libxfce4panel.la					\
+	-L$(top_srcdir)/libs -lxfce4panel				\
 	@LIBXFCEGUI4_LIBS@						\
 	@LIBXFCE4MCS_CLIENT_LIBS@
 
