--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -34,3 +34,7 @@ plugins/separator/separator.c
 plugins/mailcheck/mailcheck.c
 plugins/sample-plugin/sample.c
 
+# files added by intltool-prepare
+settings/xfce-panel-settings.desktop.in
+settings/xfce-iconbox-settings.desktop.in
+settings/xfce-taskbar-settings.desktop.in
