--- a/settings/Makefile.am
+++ b/settings/Makefile.am
@@ -90,7 +90,7 @@ desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
 EXTRA_DIST = 								\
-	$(desktop_DATA)
+	$(desktop_in_files)
 
 DISTCLEANFILES =							\
 	$(desktop_DATA)
