--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -10,6 +10,7 @@ Name[lt]=Xfce 4 skydelio nustatymai
 Name[nl]=Instellingen Xfce 4 Panel
 Name[ro]=Xfce4 setări panou
 Name[ru]=Настройки панели Xfce 4
+Name[zh_CN]=Xfce 4 面板设置
 Name[zh_TW]=Xfce 4 面板設定
 Comment=Panel Settings
 Comment[et]=Paneeli seaded
@@ -21,6 +22,7 @@ Comment[lt]=Skydelio nustatymai
 Comment[nl]=Instellingen voor het paneel
 Comment[ro]=Setări ale panoului
 Comment[ru]=Настройки панели
+Comment[zh_CN]=设置面板
 Comment[zh_TW]=設定面板
 Exec=xfce-setting-show xfce
 Icon=xfce4-panel
@@ -36,3 +38,4 @@ GenericName[lt]=Skydelio nustatymai
 GenericName[nl]=Instellingen Panel
 GenericName[ro]=Setări panou
 GenericName[ru]=Настройки панели
+GenericName[zh_CN]=设置面板
