Update new launcher: * put dialog code in separate file * distinguish between category icons and custom ones * Add some DND. Dragging from appfinder cause crashes; don't know why.
(Old svn revision: 4325)

--- a/plugins/launcher/Makefile.am
+++ b/plugins/launcher/Makefile.am
@@ -7,7 +7,10 @@ liblauncher_la_LDFLAGS =							\
 	-module
 
 liblauncher_la_SOURCES = 						\
-	launcher.c
+	launcher.h							\
+	launcher.c							\
+	launcher-dialog.h						\
+	launcher-dialog.c
 
 liblauncher_la_CFLAGS =							\
 	-I$(top_srcdir)							\
