Restructuring work: * make panel popup part of the launcher control * hopefully things still work as before ;-)
(Old svn revision: 4327)

--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -17,6 +17,8 @@ xfce4_panel_SOURCES =						\
 	groups.h 						\
 	icons.c 						\
 	icons.h 						\
+	item-control.c 							\
+	item-control.h 							\
 	item.c 							\
 	item.h 							\
 	item_dialog.c 						\
