Add itembar and item widgets: * XfceItembar : container for XfceItem's * XfceItem : simple container to add to an itembar * XfceSeparatorItem : special XfceItem that simply shows a separator
* Make panel controls and separator item plugin use the new widgets.
* Make taskbar use new widgets


(Old svn revision: 4337)

--- a/libs/Makefile.am
+++ b/libs/Makefile.am
@@ -1,17 +1,32 @@
 lib_LTLIBRARIES = libxfce4panel.la
 
 libxfce4panel_la_SOURCES =						\
-	xfce-enum-types.h						\
-	xfce-enum-types.c						\
-	xfce-marshal.h							\
-	xfce-marshal.c							\
 	xfce-arrow-button.c						\
 	xfce-arrow-button.h						\
+	xfce-enum-types.c						\
+	xfce-enum-types.h						\
+	xfce-itembar.c							\
+	xfce-itembar.h							\
+	xfce-item.c							\
+	xfce-item.h							\
+	xfce-marshal.c							\
+	xfce-marshal.h							\
 	xfce-paint-private.c						\
 	xfce-paint-private.h						\
 	xfce-panel-window.c						\
-	xfce-panel-window.h
+	xfce-panel-window.h						\
+	xfce-separator-item.c						\
+	xfce-separator-item.h
 
+xfce4_panelincludedir = $(includedir)/xfce4/panel
+
+xfce4_panelinclude_HEADERS =						\
+	xfce-arrow-button.h						\
+	xfce-itembar.h							\
+	xfce-item.h							\
+	xfce-panel-window.h						\
+	xfce-separator-item.h
+								
 libxfce4panel_la_CFLAGS =						\
 	-I$(top_srcdir)							\
 	-I$(top_srcdir)/lib						\
