update JA translations
(Old svn revision: 4342)

--- a/Makefile.in
+++ b/Makefile.in
@@ -242,6 +242,7 @@ conf_DATA = \
 	contents.xml.he							\
 	contents.xml.hu							\
 	contents.xml.it							\
+	contents.xml.ja							\
 	contents.xml.ko							\
 	contents.xml.lt							\
 	contents.xml.ms							\
