update EU translations
(Old svn revision: 4345)

--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -12,6 +12,7 @@ Name[ro]=Xfce4 setări panou
 Name[ru]=Настройки панели Xfce 4
 Name[zh_CN]=Xfce 4 面板设置
 Name[zh_TW]=Xfce 4 面板設定
+Name[eu]=Xfce 4 Panel Ezarpenak
 Comment=Panel Settings
 Comment[et]=Paneeli seaded
 Comment[fi]=Paneelin asetukset
@@ -24,6 +25,7 @@ Comment[ro]=Setări ale panoului
 Comment[ru]=Настройки панели
 Comment[zh_CN]=设置面板
 Comment[zh_TW]=設定面板
+Comment[eu]=Panel Ezarpenak
 Exec=xfce-setting-show xfce
 Icon=xfce4-panel
 Terminal=false
@@ -39,3 +41,4 @@ GenericName[nl]=Instellingen Panel
 GenericName[ro]=Setări panou
 GenericName[ru]=Настройки панели
 GenericName[zh_CN]=设置面板
+GenericName[eu]=Panel Ezarpenak
