update HU translations
(Old svn revision: 4346)

--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -13,6 +13,7 @@ Name[ru]=Настройки панели Xfce 4
 Name[zh_CN]=Xfce 4 面板设置
 Name[zh_TW]=Xfce 4 面板設定
 Name[eu]=Xfce 4 Panel Ezarpenak
+Name[hu]=Xfce 4 panel beállítások
 Comment=Panel Settings
 Comment[et]=Paneeli seaded
 Comment[fi]=Paneelin asetukset
@@ -26,6 +27,7 @@ Comment[ru]=Настройки панели
 Comment[zh_CN]=设置面板
 Comment[zh_TW]=設定面板
 Comment[eu]=Panel Ezarpenak
+Comment[hu]=Panel beállítások
 Exec=xfce-setting-show xfce
 Icon=xfce4-panel
 Terminal=false
@@ -42,3 +44,4 @@ GenericName[ro]=Setări panou
 GenericName[ru]=Настройки панели
 GenericName[zh_CN]=设置面板
 GenericName[eu]=Panel Ezarpenak
+GenericName[hu]=Panel beállítások
