--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,7 @@ conf_DATA = 								\
 	contents.xml.ar							\
 	contents.xml.az							\
 	contents.xml.ca							\
+	contents.xml.da							\
 	contents.xml.eu							\
 	contents.xml.fi							\
 	contents.xml.fr							\
