--- a/Makefile.in
+++ b/Makefile.in
@@ -236,6 +236,7 @@ conf_DATA = \
 	contents.xml.ar							\
 	contents.xml.az							\
 	contents.xml.ca							\
+	contents.xml.da							\
 	contents.xml.eu							\
 	contents.xml.fi							\
 	contents.xml.fr							\
