--- a/config/Makefile.am
+++ b/config/Makefile.am
@@ -1,25 +1,12 @@
 @SET_MAKE@
 
 confdir = $(sysconfdir)/xdg/xfce4/panel
-conf_DATA = 								\
-	contents.xml							\
-	contents.xml.ar							\
-	contents.xml.az							\
-	contents.xml.ca							\
-	contents.xml.eu							\
-	contents.xml.fr							\
-	contents.xml.he							\
-	contents.xml.hu							\
-	contents.xml.it							\
-	contents.xml.ko							\
-	contents.xml.ms							\
-	contents.xml.nl							\
-	contents.xml.ro							\
-	contents.xml.ru							\
-	contents.xml.sk							\
-	contents.xml.tr							\
-	contents.xml.uk							\
-	contents.xml.vi							\
-	contents.xml.zh_TW
+conf_in_files = contents.xml.in
+conf_DATA = $(conf_in_files:.xml.in=.xml)
+@INTLTOOL_XML_RULE@
 
-EXTRA_DIST=$(conf_DATA)
+EXTRA_DIST = 								\
+	$(conf_in_files)
+
+DISTCLEANFILES =							\
+	$(conf_DATA)
