--- a/config/contents.xml.in
+++ b/config/contents.xml.in
@@ -7,34 +7,34 @@
       <Popup/>
       <Control id="-2" popup="0">
         <Command term="0" sn="0">xfterm4</Command>
-        <Tooltip>Terminal</Tooltip>
+        <_Tooltip>Terminal</_Tooltip>
         <Icon id="12"/>
       </Control>
     </Group>
     <Group>
       <Popup>
         <Item>
-          <Caption>Appfinder</Caption>
+          <_Caption>Appfinder</_Caption>
           <Command term="0" sn="1">xfce4-appfinder</Command>
-          <Tooltip>Find and run applications</Tooltip>
+          <_Tooltip>Find and run applications</_Tooltip>
           <Icon id="3"/>
         </Item>
         <Item>
-          <Caption>Konqueror</Caption>
+          <_Caption>Konqueror</_Caption>
           <Command term="0" sn="0">konqueror</Command>
-          <Tooltip>Konqueror File Manager</Tooltip>
+          <_Tooltip>Konqueror File Manager</_Tooltip>
           <Icon id="2"/>
         </Item>
         <Item>
-          <Caption>Nautilus</Caption>
+          <_Caption>Nautilus</_Caption>
           <Command term="0" sn="0">nautilus --no-desktop</Command>
-          <Tooltip>Nautilus File Manager</Tooltip>
+          <_Tooltip>Nautilus File Manager</_Tooltip>
           <Icon id="2"/>
         </Item>
       </Popup>
       <Control id="-2" popup="1">
         <Command term="0" sn="1">xffm</Command>
-        <Tooltip>File manager</Tooltip>
+        <_Tooltip>File manager</_Tooltip>
         <Icon id="2"/>
       </Control>
     </Group>
@@ -42,7 +42,7 @@
       <Popup/>
       <Control id="-2" popup="0">
         <Command term="0" sn="0">mozilla</Command>
-        <Tooltip>Mozilla Web Browser</Tooltip>
+        <_Tooltip>Mozilla Web Browser</_Tooltip>
         <Icon id="7"/>
       </Control>
     </Group>
@@ -58,7 +58,7 @@
       <Popup/>
       <Control id="-2" popup="0">
         <Command term="0" sn="0">xmms</Command>
-        <Tooltip>Music player</Tooltip>
+        <_Tooltip>Music player</_Tooltip>
         <Icon id="6"/>
       </Control>
     </Group>
@@ -77,22 +77,22 @@
     <Group>
       <Control id="-2" popup="0">
         <Command term="0" sn="0">xfce-setting-show</Command>
-        <Tooltip>Settings</Tooltip>
+        <_Tooltip>Settings</_Tooltip>
         <Icon id="3"/>
       </Control>
     </Group>
     <Group>
       <Popup>
         <Item>
-          <Caption>Printer Management</Caption>
+          <_Caption>Printer Management</_Caption>
           <Command term="0" sn="1">xfprint-manager</Command>
-          <Tooltip>Printer Management</Tooltip>
+          <_Tooltip>Printer Management</_Tooltip>
           <Icon id="9"/>
         </Item>
       </Popup>
       <Control id="-2" popup="1">
         <Command term="0" sn="1">xfprint4</Command>
-        <Tooltip>Drag file to print</Tooltip>
+        <_Tooltip>Drag file to print</_Tooltip>
         <Icon id="9"/>
       </Control>
     </Group>
@@ -100,7 +100,7 @@
       <Popup/>
       <Control id="-2" popup="0">
         <Command term="0" sn="0">xfhelp4</Command>
-        <Tooltip>Manual</Tooltip>
+        <_Tooltip>Manual</_Tooltip>
         <Icon id="5"/>
       </Control>
     </Group>
