--- a/configure.ac
+++ b/configure.ac
@@ -32,11 +32,11 @@ dnl disable static libs
 AC_DISABLE_STATIC
 
 dnl Check for basic programs
-AC_PROG_CC
-AC_PROG_INSTALL
-AC_PROG_LN_S
-AC_PROG_LIBTOOL
-AC_PROG_INTLTOOL
+AC_PROG_CC()
+AC_PROG_INSTALL()
+AC_PROG_LN_S()
+AC_PROG_LIBTOOL()
+AC_PROG_INTLTOOL()
 
 LIBXFCE4PANEL_VERINFO=libxfce4panel_verinfo()
 AC_SUBST([LIBXFCE4PANEL_VERINFO])
