--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,4 @@
 # panel
-panel/groups.c
 panel/xfce_support.c
 panel/settings.c
 panel/controls_dialog.c
@@ -10,7 +9,6 @@ panel/controls.c
 panel/panel.c
 panel/icons.c
 panel/mcs_client.c
-panel/popup.c
 
 #taskbar
 taskbar/xftaskbar.c
@@ -38,3 +36,4 @@ plugins/sample-plugin/sample.c
 settings/xfce-panel-settings.desktop.in
 settings/xfce-iconbox-settings.desktop.in
 settings/xfce-taskbar-settings.desktop.in
+config/contents.xml.in
