--- a/.cvsignore
+++ b/.cvsignore
@@ -1,9 +1,17 @@
 Makefile
+Makefile.in
 autom4te.cache
-config.h
+config.h*
 config.log
 config.status
 configure.lineno
 libtool
 stamp-h1
-xfce4.spec
+xfce4-panel.spec
+aclocal.m4
+depcomp
+compile
+install-sh
+missing
+mkinstalldirs
+ltmain.sh
