--- a/Makefile.in
+++ b/Makefile.in
@@ -236,12 +236,16 @@ conf_DATA = \
 	contents.xml.ar							\
 	contents.xml.az							\
 	contents.xml.ca							\
+	contents.xml.da							\
 	contents.xml.eu							\
+	contents.xml.fi							\
 	contents.xml.fr							\
 	contents.xml.he							\
 	contents.xml.hu							\
 	contents.xml.it							\
+	contents.xml.ja							\
 	contents.xml.ko							\
+	contents.xml.lt							\
 	contents.xml.ms							\
 	contents.xml.nl							\
 	contents.xml.ro							\
@@ -249,6 +253,7 @@ conf_DATA = \
 	contents.xml.sk							\
 	contents.xml.tr							\
 	contents.xml.vi							\
+	contents.xml.zh_CN						\
 	contents.xml.zh_TW
 
 EXTRA_DIST = \
@@ -731,6 +736,12 @@ rpm: dist
 
 html: Makefile
 	make -C doc html
+
+dist-bz2: dist
+	zcat $(PACKAGE)-$(VERSION).tar.gz | bzip2 --best -c > $(PACKAGE)-$(VERSION).tar.bz2
+
+distcheck-bz2: distcheck
+	zcat $(PACKAGE)-$(VERSION).tar.gz | bzip2 --best -c > $(PACKAGE)-$(VERSION).tar.bz2
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
