--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -2,18 +2,32 @@
 Encoding=UTF-8
 Name=Xfce 4 Panel Settings
 Name[et]=Xfce 4 paneeli seaded
+Name[fi]=Xfce 4 paneelin asetukset
 Name[fr]=Paramètres du panneau Xfce 4
 Name[he]=הגדרות לוח Xfce 4
 Name[ko]=Xfce 4 패널 설정
+Name[lt]=Xfce 4 skydelio nustatymai
 Name[nl]=Instellingen Xfce 4 Panel
+Name[ro]=Xfce4 setări panou
+Name[ru]=Настройки панели Xfce 4
+Name[zh_CN]=Xfce 4 面板设置
 Name[zh_TW]=Xfce 4 面板設定
+Name[eu]=Xfce 4 Panel Ezarpenak
+Name[hu]=Xfce 4 panel beállítások
 Comment=Panel Settings
 Comment[et]=Paneeli seaded
+Comment[fi]=Paneelin asetukset
 Comment[fr]=Paramétrage du panneau
 Comment[he]=הגדרות לוח
 Comment[ko]=패널 설정
+Comment[lt]=Skydelio nustatymai
 Comment[nl]=Instellingen voor het paneel
+Comment[ro]=Setări ale panoului
+Comment[ru]=Настройки панели
+Comment[zh_CN]=设置面板
 Comment[zh_TW]=設定面板
+Comment[eu]=Panel Ezarpenak
+Comment[hu]=Panel beállítások
 Exec=xfce-setting-show xfce
 Icon=xfce4-panel
 Terminal=false
@@ -22,5 +36,12 @@ Categories=X-XFCE;Settings;DesktopSettings;
 OnlyShowIn=XFCE;
 GenericName=Panel Settings
 GenericName[et]=Paneeli seaded
+GenericName[fi]=Paneelin asetukset
 GenericName[ko]=패널 설정
+GenericName[lt]=Skydelio nustatymai
 GenericName[nl]=Instellingen Panel
+GenericName[ro]=Setări panou
+GenericName[ru]=Настройки панели
+GenericName[zh_CN]=设置面板
+GenericName[eu]=Panel Ezarpenak
+GenericName[hu]=Panel beállítások
