Update French doc
(Old svn revision: 4377)

--- a/doc/fr/images/Makefile.am
+++ b/doc/fr/images/Makefile.am
@@ -1,5 +1,8 @@
 imagesdir = $(datadir)/xfce4/doc/fr/images
 images_DATA = \
+	add-item-dialog.png \
+	default-session.png \
+	pager-properties.png \
 	clock-properties.png \
 	default_panel.png \
 	handle-popup.png \
