--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,7 @@ dnl
 
 AC_INIT([panel/main.c])
 
-AM_INIT_AUTOMAKE([xfce4-panel], [4.2.1.1])
+AM_INIT_AUTOMAKE([xfce4-panel], [4.2.2])
 
 AM_CONFIG_HEADER([config.h])
 
@@ -72,6 +72,8 @@ Makefile
 doc/Makefile
 doc/C/Makefile
 doc/C/images/Makefile
+doc/fr/Makefile
+doc/fr/images/Makefile
 po/Makefile.in
 icons/Makefile
 panel/Makefile
