--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -25,12 +25,17 @@ settings/iconbox_plugin.c
 
 # plugins
 plugins/clock/clock.c
+plugins/flexspace/flexspace.c
+plugins/launcher/launcher.c
+plugins/launcher/launcher-dialog.c
+plugins/mailcheck/mailcheck.c
 plugins/pager/pager.c
+plugins/sample-plugin/sample.c
+plugins/separator/separator.c
 plugins/switcher/switcher.c
 plugins/systembuttons/systembuttons.c
-plugins/separator/separator.c
-plugins/mailcheck/mailcheck.c
-plugins/sample-plugin/sample.c
+plugins/systray/systray.c
+plugins/tasklist/tasklist.c
 
 # files added by intltool-prepare
 settings/xfce-panel-settings.desktop.in
