Another clock plugin to try out a new clock layout. It has to be moved somewhere else or merged with another plugin eventually -- no need to have 100s of clocks ;)
(Old svn revision: 15952)

--- a/configure.ac
+++ b/configure.ac
@@ -93,6 +93,7 @@ taskbar/Makefile
 iconbox/Makefile
 settings/Makefile
 plugins/Makefile
+plugins/anotherclock/Makefile
 plugins/clock/Makefile
 plugins/flexspace/Makefile
 plugins/launcher/Makefile
